--- a/GOA/day 17/homework/fullstructure.html
+++ b/GOA/day 17/homework/fullstructure.html
@@ -8,9 +8,10 @@
     </head>
 
     <body>
-        <h3><b>ცოტა რამ ჩემ შესახებ</b></h3>
+        <h1><b>საბა ლომსაძე</b></h1>
+        <img src="/day 17/photo/434576892_955417712398121_1032403494940678571_n.jpg">
         <p>საბა ლომსაძე 13 წლის. პროგრამირების მიმართ ინტერესი გამიჩნდა დაახლოებით 10-11 წლის ასაკიდან, ინტერნეტის და სოც მედიების წყალობით. დავდიოდი 4 წელი კალათბურთზე.პროგრამირების შესწავლა დავიწყე 2024 წლის თებერვალში. ის მოლოდინი და უდიდესი ინტერესი გამიმართლდა. მგონია რო მსოფლიოში  <u>საუკეთესო</u> პროფესია ავირჩიე და ამ საქმის მიმართ ინტერესი არ მომაკლდება.</p>
        <button>მეტი</button>
-       <img src="/day 17/photo/434576892_955417712398121_1032403494940678571_n.jpg">
+    
     </body>
 </html>
