--- a/GOA/day 25/homework/form.html
+++ b/GOA/day 25/homework/form.html
@@ -15,6 +15,7 @@
         <input type="date">
         <br>
         <p>check if you are bot <input type="checkbox"></p>
+        <input type="submit">
     </form>
 </body>
 </html>
