--- a/GOA/day 31/homework/homeowkr.html
+++ b/GOA/day 31/homework/homeowkr.html
@@ -24,32 +24,37 @@
             <br>
             <label for="password">Password</label>
             <input type="password" id="password" name="password" >
+            <br>
+            <br>
+            <select>
+                <option value="Khinkali">Khinkali</option>
+                <option value="Mtsvadi">Mtsvadi</option>
+                <option value="Khachapuri">Khachapuri</option>
+                <option value="Qababi">Qababi</option>
+                <option value="Chaqafuli">Chaqafuli</option>
+            </select>
+            <br>
+            <br>
+            <select>
+                <p>best sports</p>
+                <option value="Football">Football</option>
+                <option value="Basketball">Basketball</option>
+                <option value="Teniss">Teniss</option>
+                <option value="Ragbi">Ragbi</option>
+            </select>
+            <br>
+            <br>
+            <select>
+                <p>best</p>
+                <option value="Mercedes">Mercedes</option>
+                <option value="Porsche">Porsche</option>
+                <option value="BMW">BMW</option>
+                <option value="Bugatti">Bugatti</option>
+            </select>
+            <br>
+            <br>
+            <input type="submit">    
         </form>   
-        <select>
-            <option value="Khinkali">Khinkali</option>
-            <option value="Mtsvadi">Mtsvadi</option>
-            <option value="Khachapuri">Khachapuri</option>
-            <option value="Qababi">Qababi</option>
-            <option value="Chaqafuli">Chaqafuli</option>
-        </select>
-        <br>
-        <select>
-            <option value="Football">Football</option>
-            <option value="Basketball">Basketball</option>
-            <option value="Teniss">Teniss</option>
-            <option value="Ragbi">Ragbi</option>
-        </select>
-        <br>
-        <select>
-            <option value="Mercedes">Mercedes</option>
-            <option value="Porsche">Porsche</option>
-            <option value="BMW">BMW</option>
-            <option value="Bugatti">Bugatti</option>
-        </select>
-        <br>
-        <input type="submit">    
     </center>
 </body>
 </html>
-
-
