--- a/GOA/day 33/homework/homework.html
+++ b/GOA/day 33/homework/homework.html
@@ -9,11 +9,11 @@
     <h1>Welcome to My Media Website</h1>
     <h2>My Favorite Video</h2>
     <video controls>
-        <source src="/day 33/audio/Gold Digger.mp4" type="video/Media"> 
+        <source src="/day 33/video/5 Second Video_ Watch the Milky Way Rise.mp4" type="video/mp4"> 
     </video>
     <h2>My Favorite Song</h2>
     <audio controls>
-        <source src="/day 33/video/5 Second Video_ Watch the Milky Way Rise.mp4" type="audio/mp3"> 
+        <source src="/day 33/audio/Gold Digger.mp4 " type="audio/mp4"> 
     </audio>
 </body>
 </html>
