--- a/GOA/day 35/homework/index.html
+++ b/GOA/day 35/homework/index.html
@@ -28,7 +28,7 @@ footer
                     <a href="goainf.html">goainf</a>
                 </li>
                 <li>
-                    <a href="goaland.html"></a>
+                    <a href="goaland.html">goaland</a>
                 </li>
             </ul>
         </nav>
